--- a/amigos.html
+++ b/amigos.html
@@ -25,7 +25,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <a href="https://github.com/Emilin34/red-social/actions/runs/4705816668"><center><h1>Emilin Santos</h1></center></br></a>&nbsp;&nbsp;
+                            <a href="https://emilin34.github.io/red-social/"><center><h1>Emilin Santos</h1></center></br></a>&nbsp;&nbsp;
                             <center><img src="imagenes/emi.jpg" width="120" height="160"></center>
                             </td>   
                       
