--- a/amigos.html
+++ b/amigos.html
@@ -33,6 +33,17 @@
                                 <a href="https://danielreyes6tocontador.github.io/web-social.github.io/"><center><h1><i><b><u>Daniel Reyes</u></b></i></h1></center></br></a>&nbsp;&nbsp;
                                 <center><img src="imagenes/l.jpg" width="90" height="120"></center>
                                 </td>  
+<td>
+                                <a href="https://keisileiva20.github.io/red/"><center><h1><i><b><u>Keisi Leiva</u></b></i></h1></center></br></a>&nbsp;&nbsp;
+                                <center><img src="imagenes/kei.jpg" width="90" height="120"></center>
+                                </td>  
+ </tr>
+                    <tr>
+                        <td>
+                            <a href="https://zabdimarroquin4.github.io/red/"><center><h1>Zabdi Marroquin</h1></center></br></a>&nbsp;&nbsp;
+                            <center><img src="imagenes/l.jpg" width="90" height="120"></center>
+                            </td>   
+
         </tr>
     </table>
     <right><font color="black" size="15"><a href="index.html">←</a></font></right>
