--- a/amigos.html
+++ b/amigos.html
@@ -41,7 +41,7 @@
                     <tr>
                         <td>
                             <a href="https://zabdimarroquin4.github.io/red/"><center><h1>Zabdi Marroquin</h1></center></br></a>&nbsp;&nbsp;
-                            <center><img src="imagenes/l.jpg" width="90" height="120"></center>
+                            <center><img src="imagenes/ke.jpg" width="90" height="120"></center>
                             </td>   
 
         </tr>
