--- a/amigos.html
+++ b/amigos.html
@@ -43,6 +43,10 @@
                             <a href="https://zabdimarroquin4.github.io/red/"><center><h1>Zabdi Marroquin</h1></center></br></a>&nbsp;&nbsp;
                             <center><img src="imagenes/ke.jpg" width="90" height="120"></center>
                             </td>   
+ <td>
+                            <a href="https://irenelarios2005.github.io/Red-Social/"><center><h1>Irene Larios</h1></center></br></a>&nbsp;&nbsp;
+                            <center><img src="imagenes/ke.jpg" width="90" height="120"></center>
+                            </td>   
 
         </tr>
     </table>
