--- a/amigos.html
+++ b/amigos.html
@@ -47,6 +47,10 @@
                             <a href="https://irenelarios2005.github.io/Red-Social/"><center><h1>Irene Larios</h1></center></br></a>&nbsp;&nbsp;
                             <center><img src="imagenes/ke.jpg" width="90" height="120"></center>
                             </td>   
+<td>
+                            <a href="https://astridlopreto.github.io/lopi/"><center><h1>Astrid Lopreto</h1></center></br></a>&nbsp;&nbsp;
+                            <center><img src="imagenes/ke.jpg" width="90" height="120"></center>
+                            </td>   
 
         </tr>
     </table>
